improv reset, fix links to stylesheets, tidy spacing.

--- a/css/reset.css
+++ b/css/reset.css
@@ -23,6 +23,7 @@ table{border-collapse:collapse; border-spacing:0}
 
 /* ===== CUSTOM RESET ===== */
 
+html{font-size:100%; -webkit-text-size-adjust:100%; -ms-text-size-adjust:100%} /* prevent text resize on orientation change */
 html, body{height:100%}
 
 object{outline:none; display:block; overflow:hidden} /* force redraw on IE8, fix outline/scroll bug on Firefox 3.6, remove unnecessary margin (copied from swffit)  */
@@ -30,8 +31,14 @@ iframe{border:0}
 img{border:0; -ms-interpolation-mode:bicubic} /* border inside links on IE6-7 and also improves scaling on IE */
 
 button, input, select, textarea{font-size:100%; vertical-align:baseline; *vertical-align:middle} /* font-size doesn't inherit in some browsers */
-button, input{line-height:normal; *overflow:visible} /* fix FF3 line-height, fix IE6/7 */
-button{cursor:pointer}
+button, input{line-height:normal} /* fix FF3-4 line-height */
+
+/* borrowed from normalize.css */
+button, input[type="button"], input[type="reset"], input[type="submit"]{cursor:pointer; -webkit-appearance:button; *overflow: visible}
+
+/* www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/ */
+button::-moz-focus-inner, input::-moz-focus-inner{border:0; padding:0}
+
 textarea{overflow:auto; font:inherit; vertical-align:top} /* fix scroll on IE and inherit font style */
 
 address{font-style:normal} /* IE use italic by default */
